refactor: standardize "active" field usage, remove obsolete CAN filter component, enhance JSON serialization and CAN protocol handling
- Replace "isEnabled" with "active" field across policy action, filter,
and trigger entities, repositories, and initializers
- Remove obsolete CAN policy filter management component and related
transient fields/methods from CAN node and page service
- Update CAN filter domain and service: improve protocol variable
handling, field naming, and validation
- Refactor CAN node service: reorganize protocol file parsing, variable
extraction, and summary generation; improve method structure and clarity
- Enhance JSON serialization: introduce scenario-based exclusion
configs, support for BAB configuration and policy JSON, update
pretty-printing logic
- Update project and rule page services to use new JSON serialization
scenarios and add "Apply Project" action for exporting project JSON
- Improve UI consistency: use custom text fields, update filter
toolbars, and refine selection/filtering in component lists
- Minor code cleanup, formatting, and removal of unused or redundant
code